Meeting Page #18 - fixed conflict search functionality with collapse, on the agenda tab

--- a/resources/sass/pages/_meeting.scss
+++ b/resources/sass/pages/_meeting.scss
@@ -360,12 +360,6 @@
                 .ris-i_expand-more {
                     transform: rotate(180deg);
                 }
-
-                .ris-description__content {
-                    @include breakpoint($bp-mobile-max) {
-                        display: none;
-                    }
-                }
             }
 
             .ris-text {
